# docparse

./: .gitignore  README.md  pyproject.toml
docparse/: __init__.py  cache.py  cleaning.py  cli.py  config.py  errors.py  json_utils.py  models.py  parser.py  pdf.py  postprocess.py  prompts.py  routing.py
docparse/llm/: __init__.py  base.py  factory.py  openai_client.py
examples/: basic_usage.py
tests/: test_cache.py  test_metadata_and_chunking.py  test_routing.py  test_schema_repair.py
