[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docparse"
version = "0.1.0"
description = "Parse PDFs into clean Markdown and structured JSON"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
]

[project.optional-dependencies]
pdf = [
  "pymupdf>=1.24.0",
  "pdfplumber>=0.11.0",
]
openai = [
  "openai>=1.0.0",
]
test = [
  "pytest>=8.0",
]

[project.scripts]
docparse = "docparse.cli:main"

[tool.setuptools.packages.find]
include = ["docparse*"]
